
.Server:
* new SubjectFilterType mode attribute to specify how this filter type should be enabled. on read, write of both (default)

.Components:
* Grid
** use div container
** new option defaultButtons=true to show/hide action button
** allow button actions to be triggered via bcdGrid:save, bcdGrid:reset, bcdGrid:addRow on targetHtml
** fix grouped headers to not clip long cells

* DocUploader
** initial commit of a document uploader component, uses VFS (bcd_docUpload binding) to store data on scope/instance level (scope subjectsettings)

* Scorecard
** fix aspect definitions with multiple chooseCalc when statements
** calc:AspectRef can directly address a bindingItemId now

* Charts
** align echart adapter to support getData() and set chart:ChartsDrawn
** fix configurationFromWRS to correctly use unit and caption information in case of a standard cube (1rowDim/1colDim/1measure)

.Widgets
* InputField
** fix not disabled field until options model is ready (in case of wrapped optionmodels)

* fixedTableHeader
** createFixedTableHeader uses optimized and more compatible code
** new htmlBuilder parameters createHeaderFilters and createFixHeader

* createTableHeadFilter
** add option valueCaptionProvider which allows asynchronous providing of code/caption data for filter dialog

* comment widget
** initial commit of a comment widget to store comments in the database (bcd_comment) on scope/instance level (scope subjectsettings)

.Utils
* bcdui.util.getUuid() returns you an uuid

==== Release 5_4_0

.Major new features:

. Support for ECMA6
* Introduced Babel to transpile for usage in Internet Explorer
* Adjusted js loader for IE
* Using 'strict' mode now in all JS sources
* updated to jQuery 3.4.1, jQuery-UI 1.12.1

. Components: Scorecard, Cube, Charts, Export, Grid, Tree
* Added Grid Component
* Added Tree Component
* Added collapse/expand functionaly to cubes
* Reorganized CubeContextMenu and added hard toggle column sort
* Charts support for dark themes